ApplicationLinking <> Fixed some layout issues

--- a/FrontEnd/src/app/pages/trainings/trainings.page.scss
+++ b/FrontEnd/src/app/pages/trainings/trainings.page.scss
@@ -16,6 +16,12 @@ ion-label{
   font-weight: bold;
   font-family: 'Cairo', sans-serif;
 }
+
+ion-checkbox {
+  pointer-events: none;
+}
+
+
 h1{
   color: black;
   font-weight: bolder;
